--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sass": "^1.23.3"
   },
   "dependencies": {
+    "dat.gui": "^0.7.6",
     "examples": "^0.1.0",
     "three": ">=0.111.0",
     "three-gltf-loader": "^1.111.0"
